# frontier-hackathon-sparse-df-rfh

./: .gitignore  CMakeLists.txt  CMakeLists_aurora.txt  avail.txt  build-frontier.sh  build-perlmutter.sh  build.sh  modules.txt  run.sh
DF-RHF_MiniApp/: DF-RHF_MiniApp.lst
DF-RHF_MiniApp/source/: calculate_B.hpp  calculate_J.hpp  calculate_K.hpp  calculate_density.hpp  calculate_triangular_indicies.hpp  constants.hpp  df_fock_build.cpp  error_checking.hpp  read_hdf5_file.hpp  read_integrals.hpp  run_metadata.hpp  scf_data.hpp
blas/: blas_dontbuild.lst
blas/source/: axpy.cpp  copy_batch_usm.cpp  gemm.cpp  gemm_batch.cpp  gemm_usm.cpp  gemm_usm_multi_stack.cpp  gemv.cpp  gemv_batch_usm.cpp  iamax.cpp
common/: common_for_examples.hpp
data_fitting/: data_fitting_dontbuild.lst
data_fitting/source/: linear_spline.cpp
source/: calculate_B.hpp  calculate_F.hpp  calculate_J.hpp  calculate_K.hpp  calculate_density.hpp  constants.hpp  df-rhf-miniapp.cpp  df_fock_build.cpp  error_checking.hpp  get_screening_data.hpp  index_functions.hpp  read_integrals.hpp  run_metadata.hpp  scf_data.hpp
testoutput/: readdata_h5.txt
